# ROS2_fundamentals

./: README.md
prueba_robotics4_0/: package.xml  setup.cfg  setup.py
prueba_robotics4_0/launch/: turtle_mover_launch.py
prueba_robotics4_0/prueba_robotics4_0/: color_detection_node.py  object_detection_node.py  publicador.py  suscriptor.py  turtle_mover.py
prueba_robotics4_0/test/: test_integration.py
prueba_robotics4_0cpp/: CMakeLists.txt  package.xml
prueba_robotics4_0cpp/src/: number_publisher.cpp  service_client.cpp  service_server.cpp
prueba_robotics4_0cpp/srv/: Square.srv
